--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ This is not the kinda mole we mean.
 </sup></p>
 <br><br><br>
 <p>
-A mole is a unit of measurement, the base unit in the International System of Units for amount of substance, a quantity proportional to the number of elementary entities of a substance.
+A mole is a unit of measurement, the base unit in Science to measure things in terms of atoms without using ridiculous numbers of atoms and not understanding what's happening. It also makes math much simpler in terms of doing math with minuscule chemistry-related things.
 </p>
 
 
